# purtty

./: CLAUDE.md  Cargo.toml  README.md  config.example.toml
crates/purrtty-app/: Cargo.toml
crates/purrtty-app/src/: agent.rs  block.rs  config.rs  macos.rs  main.rs  urls.rs
crates/purrtty-app/tests/: smoke.rs
crates/purrtty-pty/: Cargo.toml
crates/purrtty-pty/src/: lib.rs
crates/purrtty-term/: Cargo.toml
crates/purrtty-term/src/: cell.rs  grid.rs  lib.rs  parser.rs
crates/purrtty-ui/: Cargo.toml
crates/purrtty-ui/src/: glyph_cache.rs  lib.rs  renderer.rs  theme.rs
docs/: block-mode.md  perf.md  plan.md  reflow.md
