[workspace]
resolver = "2"
members = [
    "crates/purrtty-term",
    "crates/purrtty-pty",
    "crates/purrtty-ui",
    "crates/purrtty-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wyldecat/purrtty"
rust-version = "1.80"

[workspace.dependencies]
# Internal crates
purrtty-term = { path = "crates/purrtty-term" }
purrtty-pty = { path = "crates/purrtty-pty" }
purrtty-ui = { path = "crates/purrtty-ui" }

# Error / logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Windowing / GPU (used in later milestones, declared here for consistency)
winit = "0.30"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 1
