[package]
name = "purrtty-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "purrtty — GPU-accelerated terminal emulator"
default-run = "purrtty"

[[bin]]
name = "purrtty"
path = "src/main.rs"

[dependencies]
purrtty-term = { workspace = true }
purrtty-pty = { workspace = true }
purrtty-ui = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
winit = { workspace = true }
