[package]
name = "purrtty-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "purrtty — GPU-accelerated terminal emulator"
default-run = "purrtty"

[[bin]]
name = "purrtty"
path = "src/main.rs"

[dependencies]
purrtty-term = { workspace = true }
purrtty-pty = { workspace = true }
purrtty-ui = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
winit = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSButton", "NSWindow", "NSView", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSGeometry"] }
raw-window-handle = "0.6"

# Metadata used by `cargo bundle` to produce a macOS .app. Build with:
#     cargo install cargo-bundle
#     cargo bundle --release -p purrtty-app
# The result lands in target/release/bundle/osx/.
[package.metadata.bundle]
name              = "purrtty"
identifier        = "dev.wyldecat.purrtty"
short_description = "GPU-accelerated terminal emulator"
long_description  = "A Warp-inspired, GPU-accelerated terminal emulator for macOS, built on wgpu and cosmic-text."
category          = "DeveloperTool"
copyright         = "Copyright (c) 2026 WyldeCat"
osx_minimum_system_version = "12.0"

[dev-dependencies]
font-kit = "0.14"
