[package]
name = "purrtty-term"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Terminal grid model and VT/xterm parser for purrtty"

[dependencies]
thiserror = { workspace = true }
vte = "0.13"
bitflags = "2"
unicode-width = "0.2"
